force-app/main/default/objects/P2C_EnhancedListviewConfig__c/P2C_EnhancedListviewConfig__c.object-meta.xml
<CustomObject>
    <label>Enhanced Listview Config</label>
    <nameField>
        <label>P2C_EnhancedListviewConfig Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enhanced Listview configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>