force-app/main/default/objects/P2C_EnhancedListviewConfig__c/fields/MasterListviewConfig__c.field-meta.xml
<CustomField>
    <fullName>MasterListviewConfig__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the main listiew config.
This is used when creating listviews based on another listview by a user. the listview can be made user only or shared like standard listviews.
Linking a listview to a master allow it to be selectable in the app built on a master listview.</description>
    <label>Master Listview Config</label>
    <referenceTo>P2C_EnhancedListviewConfig__c</referenceTo>
    <relationshipLabel>Enhanced Listview configs</relationshipLabel>
    <relationshipName>Enhanced_Listview_configs</relationshipName>
    <type>Lookup</type>
</CustomField>