force-app/main/default/objects/P2C_EnhancedListviewConfig__c/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <label>ObjectApiName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>