force-app/main/default/objects/P2C_EnhancedListviewConfig__c/fields/SharedListview__c.field-meta.xml
<CustomField>
    <fullName>SharedListview__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Defines if the listview can be used by other users.
Default to true</description>
    <label>Shared Listview</label>
    <type>Checkbox</type>
</CustomField>