force-app/main/default/objects/P2C_EnhancedListviewConfig__c/fields/StandardListviewId__c.field-meta.xml
<CustomField>
    <fullName>StandardListviewId__c</fullName>
    <label>Standard Listview Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>